implement webpack adoc loader and first own sample presentation

--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,15 @@
 <body>
 
 <div class="reveal">
-<div class="slides">
+<div id="container" class="slides">
 
+  <!-- <dev id="container" class="title-slide"></dev> -->
+
+  <!--
 <section class="title-slide" >
   <div class="huge framed bordered font-passionone col-80 border-3x bg-warning-alpha-08">
     <bspan>Reveal.js</bspan><br>
-      <bspan class="right-30">+ WebpackASD</bspan> 
+      <bspan class="right-30">+ Webpack</bspan> 
   </div>
   <div class="down-3">
     <i class="fa-bomb fas fa-2x"></i>
@@ -20,6 +23,7 @@
     <i class="fa-bell far fa-2x"></i>
   </div>
 </section>
+
 
 <section data-external="content/slides-external/slide-external-ex.html"> </section>
 
@@ -92,7 +96,7 @@
      \int_{a}^{b} \texapply[class=bg-warning, index=1]{x^2} \texfragment[index=0]{dx}$
   </div>
 </section>
-
+-->
 <!-- <section>
   <h2 data-animate="bounce slower">Animations are supported too!</h2>
   <div class="normal">
